--- a/www/css/main.css
+++ b/www/css/main.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: mainfont;
-    src: url(/www/resources/bpg_glaho.ttf);
+    src: url(www/resources/bpg_glaho.ttf);
 }
 
 
